# wiim-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: action.rs  app.rs  commands.rs  config.rs  logging.rs  main.rs  raw.rs  source.rs  ui.rs
